# phpvm

./: .gitignore  AGENTS.md  Cargo.toml  ISSUES.md  Project.md  README.md  REQUIREMENTS.md  clippy.toml  install.sh
.github/workflows/: ci.yml  release.yml
docs/: manifest-v2.md  manifest-v3.md  phpvm-runtimes.md
fixtures/composer-library/: composer.json
fixtures/laravel-app/: artisan  composer.json
fixtures/wordpress-plugin/: composer.json  test-plugin.php
profiles/: laravel.ini  minimal.ini  wordpress.ini
src/: cli.rs  config.rs  doctor.rs  extension.rs  install.rs  main.rs  manifest.rs  matrix.rs  net.rs  output.rs  profile.rs  profile_preset.rs  runner.rs  runtime_metadata.rs  shell_env.rs  testing.rs  version.rs
src/providers/: docker.rs  local.rs  mod.rs  static_php.rs
src/snapshots/: phpvm__output__tests__doctor_human_output_snapshot.snap  phpvm__output__tests__matrix_human_output_snapshot.snap  phpvm__output__tests__matrix_live_summary_snapshot.snap  phpvm__output__tests__release_check_human_output_snapshot.snap  phpvm__output__tests__release_check_live_summary_snapshot.snap
tests/: cli.rs
