[package]
name = "phpvm"
version = "0.3.0"
edition = "2021"
description = "PHP Compatibility Manager — test and run PHP applications across multiple runtimes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/moyerdestroyer/phpvm"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
semver = "1"
directories = "6"
indicatif = "0.17"
console = "0.15"
tempfile = "3"
camino = "1"
tar = "0.4"
flate2 = "1"
zip = "2"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = "1"

# Tuned release profile for smaller, faster distribution binaries.
# strip + LTO keeps the downloadable artifacts reasonable for a CLI that
# bundles reqwest + native-tls + indicatif etc.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = 3